PRICSSA slide added

--- a/everything.bib
+++ b/everything.bib
@@ -14,6 +14,14 @@
   edition =      {8th}
 }
 
+@manual{aapor:2016:standard:definitions,
+  author =       {{AAPOR}},
+  title =        {Standard Definitions: Final Dispositions of Case Codes and Outcome Rates for Surveys},
+  year =         {2016},
+  organization = {The American Association for Public Opinion Research},
+  edition =      {9th}
+}
+
 @MANUAL{aapor:2014:ti:terms,
   title =        {{AAPOR} Terms and Conditions for Transparency Certification},
   author =       {{AAPOR}},
@@ -18020,7 +18028,7 @@ survey data to external totals},
     journal = {Survey Methodology},
     number = {2},
     pages = {115--136},
-    title = {Modelling of complex survey data: Why model? Why is it a problem? How can we approach it?},
+    title = {Modelling of complex survey data: {Why} model? {Why} is it a problem? {How} can we approach it?},
     volume = {37},
     year = {2011}
 }
@@ -20965,6 +20973,14 @@ in the application of the new methods.},
   publisher = {Wiley},
   address   = {Hoboken, NJ},
   edition   = {2nd}
+}
+
+@article{seid:west:moser:2023,
+  author  = {Seidenberg, A. and West, B.T. and Moser, R.},
+  title   = {Preferred Reporting Items for Complex Sample Survey Analysis ({PRICSSA})},
+  journal = {Journal of Survey Statistics and Methodology},
+  year    = 2023,
+  note    = {in press}
 }
 
 @Article{self:liang:1987,
@@ -25908,3 +25924,4 @@ in the application of the new methods.},
     volume = {61},
     year = {2007}
 }
+
