--- a/ichps2023-kolenikov-svy.tex
+++ b/ichps2023-kolenikov-svy.tex
@@ -653,7 +653,7 @@ $$
         \item Balanced repeated replication (BRR; \citet{mccarthy:1969})
         \item Jackknife \citep{krewski:rao:1981}
         \item Bootstrap \citep{rao:wu:1988,sitter:1992:3bs}
-        \item Successive difference (SDR)
+        \item Successive difference (SDR; \citet{ash:2011})
     \end{itemize}
 \end{itemize}
 
@@ -722,6 +722,23 @@ Variance estimation complexities:
 \end{itemize}
 
 \citet{west:berglund:heeringa:2008}
+
+\end{frame}
+
+\section{PRICSSA}
+
+\begin{frame}\frametitle{Complex survey analysis software}
+
+\citet{seid:west:moser:2023}---Preferred Reporting Items 
+for Complex Sample Survey Analysis (PRICSSA):
+
+\begin{enumerate}
+	\item Survey characteristics: data collection dates, data collection modes, 
+	      target population, sampling design, response rates \citep{aapor:2016:standard:definitions}
+   \item Analytic characteristics: missingness rate, observation deletion, uncertainty measures,
+         weights, variance estimation methods, subpopulation analysis, suppression rules (if any),
+         software and code, singleton problems (if any), public use vs. restricted datasets.
+\end{enumerate}
 
 \end{frame}
 
