slides and handouts pdfs are regenerated

--- a/ichps2023-kolenikov-svy.tex
+++ b/ichps2023-kolenikov-svy.tex
@@ -6,7 +6,7 @@
 % \documentclass[handout]{beamer}
 % \usepackage{pgfpages}
 % \pgfpagesuselayout{2 on 1}[letter,border shrink=5mm]
-% \usecolortheme{norclight}
+% secolortheme{norclight}
 
 \usetheme{boadilla}
 
