Recompiled into handout2

--- a/ichps2023-kolenikov-svy.tex
+++ b/ichps2023-kolenikov-svy.tex
@@ -1,12 +1,12 @@
 % slides setup
-\documentclass[aspectratio=169]{beamer}
-\usecolortheme{norcdark}
+% \documentclass[aspectratio=169]{beamer}
+% \usecolortheme{norcdark}
 
 % handouts setup
-% \documentclass[handout]{beamer}
-% \usepackage{pgfpages}
-% \pgfpagesuselayout{2 on 1}[letter,border shrink=5mm]
-% secolortheme{norclight}
+\documentclass[handout]{beamer}
+\usepackage{pgfpages}
+\pgfpagesuselayout{2 on 1}[letter,border shrink=5mm]
+\usecolortheme{norclight}
 
 \usetheme{boadilla}
 
