--- a/everything.bib
+++ b/everything.bib
@@ -4946,6 +4946,40 @@
   volume    = {17}
 }
 
+@article{chen:elliott:etal:2017,
+  author = {Qixuan Chen and Michael R. Elliott and David Haziza and Ye Yang
+            and Malay Ghosh and Roderick J. A. Little and Joseph Sedransk and Mary Thompson},
+  year = 2017,
+  title = {Approaches to Improving Survey-Weighted Estimates},
+  journal = {Statistical Science},
+  volume = 32,
+  issue = 2,
+  pages = {227--248},
+  doi = {10.1214/17-STS609},
+  abstract = {
+      In sample surveys, the sample units are typically chosen using a
+      complex design. This may lead to a selection effect and, if uncorrected in the
+      analysis, may lead to biased inferences. To mitigate the effect on inferences
+      of deviations from a simple random sample a common technique is to use
+      survey weights in the analysis. This article reviews approaches to address
+      possible inefficiency in estimation resulting from such weighting.
+      To improve inferences we emphasize modifications of the basic designbased
+      weight, that is, the inverse of a unit’s inclusion probability. These
+      techniques include weight trimming, weight modelling and incorporating
+      weights via models for survey variables.We start with an introduction to survey
+      weighting, including methods derived from both the design and modelbased
+      perspectives. Then we present the rationale and a taxonomy of methods
+      for modifying the weights. We next describe an extensive numerical study
+      to compare these methods. Using as the criteria relative bias, relative mean
+      square error, confidence or credible interval width and coverage probability,
+      we compare the alternative methods and summarize our findings. To supplement
+      this numerical study we use Texas school data to compare the distributions
+      of the weights for several methods.We also make general recommendations,
+      describe limitations of our numerical study and make suggestions for
+      further investigation.  
+  }
+}
+
 @Article{cheng:liu:2001,
   author    = {Cheng, R. C. H. and Liu, W. B.},
   year      = {2001},
@@ -5724,6 +5758,19 @@
           that can be applied to a wide range of problems, including
           adjustment for unit nonresponse and frame undercoverage as
           well as statistical matching.}
+}
+
+
+@article{dagdoug:goga:haziza:2023,
+  authors = {Mehdi Dagdoug and Camelia Goga and David Haziza},
+  title = {Imputation Procedures in Surveys Using Nonparametric and 
+  Machine Learning Methods: An Empirical Comparison},
+  journal = {Journal of Survey Statistics and Methodology}, 
+  volume = 11, 
+  issue = 1, 
+  year = 2023, 
+  pages = {141–-188}, 
+  doi = {10.1093/jssam/smab004}
 }
 
 @InCollection{dalenius:1994,
@@ -8601,6 +8648,16 @@ doi = {10.1080/01621459.1981.10477729},
   title     = "Nonlinear Statistical Models",
   publisher = "John Wiley and Sons",
   address   = "New York"
+}
+
+@inproceedings{ganesh:2017:truenorth,
+  title = {Combining Probability and Non-Probability Samples Using Small Area Estimation},
+  author = {Nada Ganesh and Vicki Pineau and Adrijo Chakraborty and J. Michael Dennis},
+  note = {Available at http://www.asasrms.org/Proceedings/y2017/files/593906.pdf},
+  BOOKTITLE =    {Proceedings of the Survey Research Methods Section},
+  YEAR =         {2017},
+  address =      {Alexandria, VA},
+  organization = {The American Statistical Association}
 }
 
 @article{gelfand:smith:1990,
@@ -19470,6 +19527,17 @@ in the application of the new methods.},
     year = {2013}
 }
 
+@article{rao:2021:nonprob,
+  author = {J. N. K. Rao},
+  journal = {Sankhyā B: The Indian Journal of Statistics},
+  doi = {10.1007/s13571-020-00227-w},
+  title = {On Making Valid Inferences by Integrating Data from Surveys and Other Sources},
+  volume = 83,
+  pages = {242-272},
+  year = {2021}
+  
+}
+
 @Book{rasch:1960,
   author    = {Rasch, G.},
   year      = {1960},
@@ -23287,6 +23355,17 @@ in the application of the new methods.},
     year = {2012}
 }
 
+@book{vanbuuren:2018,
+    address = {Boca Raton, FL},
+    author = {{van} Buuren, Stef},
+    isbn = {1439868247},
+    publisher = {Chapman and Hall/CRC},
+    title = {Flexible Imputation of Missing Data},
+    series = {Interdisciplinary Statistics},
+    edition = {2nd},
+    year = {2018}
+}
+
 @Book{vandervaart2000asymptotic,
   author    = {van der Vaart, A. W.},
   year      = {2000},
@@ -24750,7 +24829,7 @@ in the application of the new methods.},
 @article{wu:rao:2009,
     author = {Wu, Changbao and Rao, J. N. K.},
     doi = {10.1002/cjs.5550340301},
-    journal = {Can J Statistics},
+    journal = {Canadian Journal of Statistics},
     number = {3},
     pages = {359--375},
     title = {Pseudo-empirical likelihood ratio confidence intervals for complex surveys},
@@ -24774,6 +24853,15 @@ in the application of the new methods.},
        the intervals.},
 }
 
+@article{wu:2022:nonprob,
+  author = {Changbao Wu},
+  journal = {Survey Methodology},
+  issue = 48,
+  number = 2,
+  year = 2022,
+  pages = {283--374},
+  title = {Statistical inference with non-probability survey samples (with discussion)}
+}
 
 @Article{wu:carroll:1988,
   author    = {Wu, Margaret C. and Carroll, Raymond J.},
